# RinEngine

./: .gitignore  AGENT.md  DEVGUIDE.md  README.md  TODO.md
RinEngine/: CMakeLists.txt
RinEngine/assets/scripts/demo/: script.json
RinEngine/l10n/: en.json  zh.json
RinEngine/scripts/demo/: script.json
RinEngine/src/app/: CMakeLists.txt  main.cpp  resources.qrc
RinEngine/src/app/qml/: Main.qml
RinEngine/src/app/qml/effects/: AnimationPlayer.qml
RinEngine/src/app/qml/layers/: LayerStack.qml
RinEngine/src/app/qml/screens/: CGGalleryScreen.qml  MusicRoomScreen.qml  TitleScreen.qml
RinEngine/src/app/qml/widgets/: BackgroundLayer.qml  CharacterLayer.qml  CharacterSlot.qml  ChoiceBox.qml  DialogueBox.qml  HistoryScreen.qml  MenuButton.qml  SaveLoadScreen.qml  SettingsScreen.qml  SystemMenu.qml  VideoPlayer.qml
RinEngine/src/core/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  GalleryManager.cpp  GalleryManager.h  GameStateManager.cpp  GameStateManager.h  LocalizationManager.cpp  LocalizationManager.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  ScriptParser.cpp  ScriptParser.h  ScriptRunner.cpp  ScriptRunner.h  SettingsManager.cpp  SettingsManager.h  VariableManager.cpp  VariableManager.h
scripts/: package_release.ps1
